Revert "chore: ci"
This reverts commit ac49bf52558e922e036604613e284f2ae7d65b66.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd bindings/pyl7vp
           python -m pip install --upgrade pip
           pip install -e .
           pip install flake8 pytest
